# bet

./: README.md  ideas.md  pyproject.toml  requirements.txt
accounts/: forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_customuser_name.py  0003_remove_customuser_name.py  0004_alter_customuser_first_name.py
api/: api.py  schemas.py
bet/: admin.py  forms.py  models.py  utils.py  views.py
bet/migrations/: 0001_initial.py  0002_game_competition_number_game_game_type_and_more.py  0003_alter_bet_game.py  0004_alter_bet_game_alter_game_game_type.py
bet/static/css/: output.css
bet/templates/bet/: base.html  base_legacy.html  bets.html  competitions.html  create_competition.html  create_game.html  create_league.html  index.html  league.html  leagues.html  leagues_config.html  leagues_legacy.html  predictions.html  results.html  teams.html
bet/templates/bet/components/: bet_table.html  bet_table_test.html  competition_league_minicards.html  competition_team_activity_info.html  game_table.html  league_created_table.html  league_played_table.html  league_summary_table.html  league_table.html  ranking_table.html  result_card.html  (+1 more)
bet/templates/cotton/: league_score.html  league_summary.html  prediction.html  prediction_django_template.html  prediction_past.html  result.html
bet/templates/registration/: login.html  signup.html
config/: asgi.py  settings.py  urls.py  wsgi.py
jstoolchains/: package.json
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
(+5 files in other folders)
